@@ -37,3 +37,7 @@ class FriendRelationTestDAO {
 }
 ```
 
+
+**Pour executer l'interface IHM, rajouter dans le run / Debug Configuration , cette ligne dans VM option :**
+
+--module-path "C:\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
